# BioBot-Neusta-Comfort

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-advanced.txt  requirements.txt
data/: README.md
data/outputs/: f11_recommendations.csv  f13_irrigation_plan.csv
docs/: CHAT_HANDOFF_GUIDE.md  DATA_STRUCTURE_REPORT.md  GITHUB_SETUP.md  PROJECT_ROADMAP.md  VSCODE_SETUP.md
docs/f10/: F10_MANAGER_SUMMARY.md  F10_UC1_livable_dangerous_periods.md  F10_UC3_rule_based_alerts.md  F10_UC4_ablation.md  F10_UC4_risk_classification.md
docs/f11/: F11_research_recommendations.md
docs/f13/: F13_research_plants.md
docs/f8/: F8_UC3_UC4_manager_summary.md  F8_UC3_UC4_pipeline.md
docs/f9/: F9_ENSEMBLE_MODELING.md  F9_MANAGER_SUMMARY.md  F9_ML_VS_DL_COMPARISON.md  F9_UC2_problem_definition.md  F9_UC3_model_review.md  F9_UC6_humidex_thresholds.md  (+6 more)
notebooks/: README.md
scripts/: f10_uc1_define_livable_dangerous_periods.py  f10_uc3_generate_rule_alerts.py  f10_uc4_train_risk_classifier.py  f11_uc1_uc5_recommendations.py  f12_uc1_zone_analysis.py  f12_uc2_protection_slots.py  f13_uc1_plant_assessment.py  f8_uc3_convert_to_standard_csv.py  f8_uc4_clean_impute_normalize_aggregate.py  f8_uc4_make_quality_figures.py  f9_compare_ml_dl_models.py  f9_full_comparison_helper.py  f9_uc6_humidex_threshold_analysis.py  f9_uc7_test_livability_models.py  f9_uc8_train_sequence_model.py
tests/: test_clean_aggregate.py  test_f11_recommendations.py  test_f12_zones.py  test_f13_plants.py  test_metrics.py  test_modeling_features.py  test_risk_rules.py  test_standardize.py
(+42 files in other folders)
